# platformed-llm

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  FOLLOWUPS.md  IMPLEMENTATION_PLAN.md  PROVIDER_ABSTRACTION.md  PROVIDER_IMPLEMENTATION_GUIDE.md  debug_anthropic.rs
.github/workflows/: ci.yml
downloaded_api_docs/: Function Calling.txt  Responses API.txt  Responses vs. Chat completions.txt
examples/: auto_compaction.rs  basic_openai.rs  capture_traces.rs  debug_streaming.rs  function_calling.rs  mock_provider.rs  simple_anthropic_test.rs  simple_chat.rs  streaming_openai.rs  vertex_unified_api.rs
src/: accumulator.rs  capabilities.rs  compaction.rs  error.rs  factory.rs  lib.rs  provider.rs  response.rs  retry.rs  sse_stream.rs  streaming.rs  test_util.rs  transport.rs
src/capabilities/: anthropic.rs  google.rs  mod.rs  openai.rs
src/middleware/: json_coercion.rs  mod.rs
src/providers/: file_resolve.rs  mock.rs  mod.rs  part_tracker.rs
src/providers/local/: chat_template.rs  chatml.rs  engine.rs  llama_gguf.rs  mod.rs
src/providers/openai/: client.rs  mod.rs  types.rs
src/providers/vertex/: anthropic.rs  anthropic_types.rs  endpoint.rs  google.rs  google_types.rs  mod.rs  transport.rs
src/rate_limit/: in_memory.rs  mod.rs  observe_stream.rs
src/types/: config.rs  files.rs  message.rs  mod.rs  prompt.rs  streaming.rs
tests/: cancellation.rs  cross_provider_tests.rs  error_traces_e2e.rs  file_upload_e2e.rs  gcs_upload_e2e.rs  http_errors_e2e.rs  integration_test.rs  llama_gguf_bridge.rs  llama_gguf_e2e.rs  mock_provider.rs  replay_traces.rs  scenarios.json  snapshot_traces.rs  streaming.rs  vertex_http_errors_e2e.rs
tests/common/: mod.rs  test_models.rs
tests/cross_provider/: function_calling_e2e.rs  mod.rs  model_switching.rs  scripted.rs
tests/cross_provider/fixtures/anthropic/: followup_response.sse  function_call_response.sse
tests/cross_provider/fixtures/google/: followup_response.sse  function_call_response.sse
tests/cross_provider/fixtures/openai/: followup_response.sse  function_call_response.sse
tests/cross_provider/providers/: anthropic.rs  google.rs  llama_gguf.rs  mod.rs  openai.rs
tests/cross_provider/traces/: README.md
tests/cross_provider/traces/anthropic/: context_window_exceeded.meta.json  context_window_exceeded.request.json  context_window_exceeded.response.sse  post_compaction_continuation.meta.json  post_compaction_continuation.request.json  post_compaction_continuation.response.sse
tests/cross_provider/traces/google/: auth_error.meta.json  auth_error.request.json  auth_error.response.sse  code_execution.events.txt  code_execution.meta.json  code_execution.request.json  code_execution.response.sse  context_window_exceeded.meta.json  context_window_exceeded.request.json  context_window_exceeded.response.sse  file_ref_image.events.txt  file_ref_image.meta.json  file_ref_image.request.json  file_ref_image.response.sse  file_ref_image.upload.response.json  function_call.events.txt  function_call.meta.json  function_call.request.json  function_call.response.sse  google_search.events.txt  google_search.meta.json  google_search.request.json  google_search.response.sse  length_limit.events.txt  length_limit.meta.json  length_limit.request.json  length_limit.response.sse  model_not_found.meta.json  model_not_found.response.sse  multi_modal_image.events.txt  multi_modal_image.meta.json  multi_modal_image.request.json  multi_modal_image.response.sse  multi_turn_tool.events.txt  multi_turn_tool.meta.json  multi_turn_tool.request.json  multi_turn_tool.response.sse  parallel_tools.events.txt  parallel_tools.meta.json  parallel_tools.request.json  (+21 more)
tests/cross_provider/traces/openai/: auth_error.meta.json  auth_error.request.json  auth_error.response.sse  context_window_exceeded.meta.json  context_window_exceeded.request.json  context_window_exceeded.response.sse  file_ref_image.events.txt  file_ref_image.meta.json  file_ref_image.request.json  file_ref_image.response.sse  file_ref_image.upload.response.json  function_call.events.txt  function_call.meta.json  function_call.request.json  function_call.response.sse  length_limit.events.txt  length_limit.meta.json  length_limit.request.json  length_limit.response.sse  model_not_found.meta.json  model_not_found.request.json  model_not_found.response.sse  multi_modal_image.events.txt  multi_modal_image.meta.json  multi_modal_image.request.json  multi_modal_image.response.sse  multi_turn_tool.events.txt  multi_turn_tool.meta.json  multi_turn_tool.request.json  multi_turn_tool.response.sse  parallel_tools.events.txt  parallel_tools.meta.json  parallel_tools.request.json  parallel_tools.response.sse  post_compaction_continuation.events.txt  post_compaction_continuation.meta.json  post_compaction_continuation.request.json  post_compaction_continuation.response.sse  reasoning_request.events.txt  reasoning_request.meta.json  (+30 more)
