[package]
name = "platformed-llm"
version = "0.1.0"
edition = "2021"
description = "A unified abstraction over multiple LLM providers"
license = "MIT OR Apache-2.0"

[dependencies]
# Async runtime — minimal subset; downstream chooses the executor.
tokio = { version = "1.40", default-features = false }
async-trait = "0.1"
tracing = "0.1"

# HTTP client
reqwest = { version = "0.12", features = [
    "json",
    "stream",
], default-features = false }
bytes = "1.0"
memchr = "2.7"

# Streaming
futures = "0.3"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
ijson = "0.1"

# Error handling
thiserror = "2.0"

# Google Cloud authentication
gcp_auth = "0.12"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.40", features = ["macros", "rt", "rt-multi-thread", "process"] }
# Lib leaves TLS to the downstream consumer; tests/examples need to make
# real HTTPS calls so we enable rustls-tls only here.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
wiremock = "0.6"
dotenvy = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
