[package]
name = "platformed-llm"
version = "0.1.0"
edition = "2021"
description = "A unified abstraction over multiple LLM providers"
license = "MIT OR Apache-2.0"

[dependencies]
# Always-on core: async runtime, streaming primitives, serde, tracing.
# `time` powers `tokio::time::sleep` in both the `retry` helper and
# the rate-limit scheduler; `sync` brings `Notify` for the rate
# limiter's per-bucket waiter wakeup. Consumers using a
# `current_thread` runtime must `enable_time()` on their builder.
tokio = { version = "1.40", default-features = false, features = ["time", "sync"] }
async-trait = "0.1"
tracing = "0.1"
bytes = "1.0"
memchr = "2.7"
futures = "0.3"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
thiserror = "2.0"

# Optional — pulled in by specific provider features.
# `reqwest` is the default HTTP client behind `ReqwestTransport`. Any
# cloud provider (openai / google / anthropic-vertex) depends on it.
reqwest = { version = "0.12", features = [
    "json",
    "stream",
], default-features = false, optional = true }
# Lazy JSON value used by the OpenAI and Vertex wire-type structs.
ijson = { version = "0.1", optional = true }
# Application Default Credentials provider for Vertex.
gcp_auth = { version = "0.12", optional = true }
# UUID generation — synthetic call_ids for Gemini function calls.
uuid = { version = "1.0", features = ["v4"], optional = true }
# Local GGUF inference for the `llama-gguf` provider.
llama-gguf = { version = "0.14", optional = true, default-features = false }
# Procedural `stream!` generators for the local provider's
# token-decode / event-translation pipeline.
async-stream = { version = "0.3", optional = true }

# Pre-test downloader for GGUF models the integration suite consumes.
# Gated behind `test-util` (which carries the TLS + runtime deps) so it
# doesn't drag TLS into the lib build by default.
[[bin]]
name = "fetch-test-models"
path = "src/bin/fetch_test_models.rs"
required-features = ["test-util"]

# Every example demonstrates a specific provider, so they're each
# gated on the matching feature. With no default features, a bare
# `cargo build` skips them; `cargo build --features openai` (or
# `--all-features`) compiles them.
[[example]]
name = "function_calling"
required-features = ["openai"]

[[example]]
name = "debug_streaming"
required-features = ["openai"]

[[example]]
name = "simple_anthropic_test"
required-features = ["anthropic-vertex"]

[[example]]
name = "vertex_unified_api"
required-features = ["vertex"]

[[example]]
name = "capture_traces"
required-features = ["openai", "google", "anthropic-vertex"]

[[example]]
name = "mock_provider"
required-features = ["mock"]

[dev-dependencies]
tokio = { version = "1.40", features = ["macros", "rt", "rt-multi-thread", "process", "test-util"] }
# Lib leaves TLS to the downstream consumer; tests/examples need to make
# real HTTPS calls so we enable rustls-tls only here.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
dotenvy = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Self-reference enables the `mock` feature for every test/bench/example
# target without forcing downstream consumers to pull it in. With this
# in place, `cargo test`, `cargo test --no-default-features --features
# openai`, and `cargo test --all-features` all see `MockProvider` —
# unit tests in `src/` no longer need ad-hoc feature gates to import
# `crate::providers::mock`. PR-review #7.
platformed-llm = { path = ".", features = ["mock"] }

[features]
# Nothing is on by default — downstream consumers opt into the
# providers they need with `--features openai`, `--features
# google,anthropic-vertex`, etc. A bare `cargo build` compiles the
# lib core only (types, transport, accumulator).
default = []

# Default `ReqwestTransport`. Implied by every hosted-provider feature
# since all of them need an HTTP client.
reqwest = ["dep:reqwest"]

# Cloud providers.
openai = ["reqwest", "dep:ijson"]
# Shared base for Gemini and Claude-via-Vertex. Pulls in HTTP + Google auth.
vertex = ["reqwest", "dep:gcp_auth", "dep:ijson", "dep:uuid"]
google = ["vertex"]
# Anthropic Claude *via Vertex* (the only Anthropic transport this
# crate implements); named to reflect that.
anthropic-vertex = ["vertex"]

# Local provider — embedded GGUF inference via the `llama-gguf` crate.
# Enables `tokio/rt` so we can shuttle synchronous inference onto
# `spawn_blocking`; `async-stream` powers the token-decode pipeline.
llama-gguf = ["dep:llama-gguf", "dep:async-stream", "tokio/rt", "tokio/sync"]

# In-process mock provider returning canned responses, for testing
# downstream code without network or credentials. Pure core types — no
# extra dependencies. Always enabled when running this crate's own
# tests/benches/examples via the self-reference in `[dev-dependencies]`;
# downstream consumers opt in by adding `features = ["mock"]` under
# `[dev-dependencies]`.
mock = []

# Public test helpers (`platformed_llm::test_util`) for locating and
# auto-downloading the GGUF models the integration suite runs against,
# plus the `fetch-test-models` binary that backs onto them. Downstream
# crates enable this under `[dev-dependencies]` to reuse the same
# models in their own tests. Pulls in `rustls-tls` + a multi-thread
# Tokio runtime for the self-contained downloads — off by default, so
# the lib itself never picks a TLS backend (downstream's call).
test-util = [
    "dep:reqwest",
    "reqwest/rustls-tls",
    "tokio/rt-multi-thread",
    "tokio/macros",
]
